--- a/assets/scss/blog/dxg.scss
+++ b/assets/scss/blog/dxg.scss
@@ -2,6 +2,15 @@
     padding-bottom: 2rem;
 }
 
+#about-dxg > div > div{
+    padding-left: 0;
+}
+
 .before-after-caption{
     padding-top: 0.5rem;
+}
+
+h2.dxg-h2.subtitle{
+    padding-left: 0;
+    padding-right: 0;
 }
